.provarCaches/00D6C0000000xA6UAI/objects/sked__Availability_Pattern__c.object
<CustomObject>
    <description>Table to store availability patterns</description>
    <fields>
        <fullName>sked__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked__Hash__c</fullName>
        <label>Hash</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Pattern__c</fullName>
        <label>Pattern</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Availability Pattern</label>
    <nameField>
        <label>Availability Pattern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Availability Patterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>